# raytracer

./: Cargo.toml
src/: camera.rs  hittable.rs  intersectable.rs  main.rs  material.rs  random_scene.rs  ray.rs  renderer.rs  scene.rs  utils.rs
src/hittable/: mod.rs  sphere.rs
src/intersectable/: sphere.rs
src/material/: dielectric.rs  lambertian.rs  metal.rs  mod.rs
