[package]
name = "raytracing-rust"
version = "0.1.0"
authors = ["Jonas Scholz <jonas.scholz123@googlemail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.14"
# indicatif = "0.15"
nalgebra = "0.7.0"

